--- a/cloud-provider-payment8001/src/main/resources/application.yml
+++ b/cloud-provider-payment8001/src/main/resources/application.yml
@@ -6,10 +6,10 @@ spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: org.gjt.mm.mysql.Driver
-    url: jdbc:mysql://localhost:3306/db?characterEncoding=utf-8&useSSL=false
+    url: jdbc:mysql://localhost:3306/springcloud?characterEncoding=utf-8&useSSL=false
     username: root
     password: 123456
 
 mybatis:
-  mapperLocations:classpath:mapper/*.xml
-  type-aliases-package:com.xlj.springcloud.entities
+  mapperLocations: classpath:mapper/*.xml
+  type-aliases-package: com.xlj.springcloud.entities
