--- a/cloud-consumer-order80/src/main/resources/application.yml
+++ b/cloud-consumer-order80/src/main/resources/application.yml
@@ -1,2 +1,14 @@
 server:
   port: 80
+
+spring:
+  application:
+    name: cloud-order-service
+
+eureka:
+  client:
+    register-with-eureka: true
+    # true将服务注册到eureka
+    fetch-registry: true
+    service-url:
+      defaultZone: http://localhost:7001/eureka
