--- a/cloud-eureka-server7001/src/main/resources/application.yml
+++ b/cloud-eureka-server7001/src/main/resources/application.yml
@@ -1,11 +1,18 @@
 server:
   port: 7001
 
+spring:
+  application:
+    #集群情况下，请保证application.name 相同，否则不可用（在eureka控制台unavailable-replicas中可以看到不可用的副本节点）
+    name: clusterEureka
+
 #双集群配置
 eureka:
   instance:
     #    eureka服务器的实例名称
-    hostname: eurek7001.com
+    hostname: eureka7001
+  #    hostname: localhost
+
   client:
     #    false表示不向注册中心注册自己
     register-with-eureka: false
@@ -13,4 +20,5 @@ eureka:
     fetch-registry: false
     service-url:
       #      设置与eureka server交互的地址查询服务和注册服务都需要依赖这个地址
-      deaultZone: http://eurek7002.com:7002/eureka/
+      #      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/  #单机版
+      defaultZone: http://eureka7002:7002/eureka/ #集群版
