--- a/cloud-eureka-server7001/src/main/resources/application.yml
+++ b/cloud-eureka-server7001/src/main/resources/application.yml
@@ -22,3 +22,10 @@ eureka:
       #      设置与eureka server交互的地址查询服务和注册服务都需要依赖这个地址
       #      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/  #单机版
       defaultZone: http://eureka7002:7002/eureka/ #集群版
+
+#    #    关闭自我保护机制，保证不可用服务及时被清除
+#  server:
+#    enable-self-preservation: false
+#    #    刷新客户端的间隔时间
+#    eviction-interval-timer-in-ms: 2000
+
