--- a/cloud-provider-payment8001/src/main/resources/application.yml
+++ b/cloud-provider-payment8001/src/main/resources/application.yml
@@ -29,3 +29,7 @@ eureka:
     instance-id: payment8001
     #    访问路径显示地址
     prefer-ip-address: true
+#    #    客户端向服务端发送心跳的时间间隔，默认为30s
+#    lease-renewal-interval-in-seconds: 1
+#    #    Eureka服务端在收到最后一次心跳的等待时间上线，默认90s，超时将移除服务
+#    lease-expiration-duration-in-seconds: 2
