feat OpenFeign的服务调用 fix Mapper与Mapper.xml的绑定

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>cloud-provider-payment8002</module>
         <module>cloud-provider-payment8004</module>
         <module>cloud-consumer-zkorder80</module>
+        <module>cloud-consumer-feign-order80</module>
     </modules>
 
     <!--  统一jar包管理-->
