feat OpenFeign的超时控制

--- a/cloud-consumer-feign-order80/src/main/resources/application.yml
+++ b/cloud-consumer-feign-order80/src/main/resources/application.yml
@@ -16,3 +16,10 @@ eureka:
       defaultZone: http://eureka7001:7001/eureka,http://eureka7002:7002/eureka
 #      单机版Eureka
 #      defaultZone: http://localhost:7001/eureka
+
+#设置feign客户端超时时间（OpenFeign默认支持ribbon）
+ribbon:
+  #  建立连接所需要的时间
+  ReadTimeout: 5000
+  #  建立连接后服务端响应的时间
+  ConnectTimeout: 5000
