--- a/cloud-consumer-feign-hystrix-order80/src/main/resources/application.yml
+++ b/cloud-consumer-feign-hystrix-order80/src/main/resources/application.yml
@@ -10,3 +10,8 @@ eureka:
       defaultZone: http://eureka7001:7001/eureka,http://eureka7002:7002/eureka
   #      单机版Eureka
   #      defaultZone: http://localhost:7001/eureka
+
+#开启feign和hystrix
+feign:
+  hystrix:
+    enabled: true
