--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>cloud-consumer-feign-order80</module>
         <module>cloud-provider-hystrix-payment8001</module>
         <module>cloud-consumer-feign-hystrix-order80</module>
+        <module>cloud-consumer-hystrix-dashboard9001</module>
     </modules>
 
     <!--  统一jar包管理-->
