--- a/cloud-gateway-gateway9527/src/main/resources/application.yml
+++ b/cloud-gateway-gateway9527/src/main/resources/application.yml
@@ -12,10 +12,10 @@ spring:
           predicates:
             - Path=/payment/get/**      # 断言，路径相对应的进行路由
 
-#        - id: payment_routh2             # 路由的id，没有固定的规则但要求统一，建议配合服务名
-#            uri: http://localhost:8001    # 匹配后提供服务的路由地址
-#            predicates:
-#              - Path=/payment/lb/**      # 断言，路径相对应的进行路由
+        - id: payment_routh2             # 路由的id，没有固定的规则但要求统一，建议配合服务名
+          uri: http://localhost:8001    # 匹配后提供服务的路由地址
+          predicates:
+            - Path=/payment/lb/**      # 断言，路径相对应的进行路由
 eureka:
   instance:
     hostname: cloud-gateway-service
