--- a/cloud-gateway-gateway9527/src/main/resources/application.yml
+++ b/cloud-gateway-gateway9527/src/main/resources/application.yml
@@ -13,8 +13,16 @@ spring:
         - id: payment_routh             # 路由的id，没有固定的规则但要求统一，建议配合服务名
 #          uri: http://localhost:8001    # 匹配后提供服务的路由地址
           uri: lb://cloud-payment-service
-          predicates:
-            - Path=/payment/get/**      # 断言，路径相对应的进行路由
+          predicates:   # 断言
+            - Path=/payment/get/**    # 指定的路径才可生效
+#            - After=2020-09-15T15:53:47.026+08:00[Asia/Shanghai]    # 在此时间之后生效
+#            - Before=2020-09-15T15:53:47.026+08:00[Asia/Shanghai]   # 在此时间之前生效
+#            - Between=2020-09-15T15:53:47.026+08:00[Asia/Shanghai],2020-09-15T16:53:47.026+08:00[Asia/Shanghai]   # 在此时间之间生效
+#            - Cookie=username,xlj   # 只有cookie包含username，并且value为xlj才生效
+#            - Header=X-Request-Id,\d+   # 包含指定请求头，value为数字
+#            - Host=**.baidu.com   # 指定主机才可访问
+#            - Method=GET    # 请求方法为GET才生效
+
 
         - id: payment_routh2             # 路由的id，没有固定的规则但要求统一，建议配合服务名
 #          uri: http://localhost:8001    # 匹配后提供服务的  路由地址
