--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>cloud-consumer-feign-hystrix-order80</module>
         <module>cloud-consumer-hystrix-dashboard9001</module>
         <module>cloud-gateway-gateway9527</module>
+        <module>cloud-config-center3344</module>
     </modules>
 
     <!--  统一jar包管理-->
