--- a/cloud-config-server3355/src/main/resources/bootstrap.yml
+++ b/cloud-config-server3355/src/main/resources/bootstrap.yml
@@ -7,9 +7,9 @@ spring:
   cloud:
     #    客户端读取服务端的配置中心文件
     config:
-      lable: test   # 分支名称
+      lable: master   # 分支名称
       name: config  # 配置文件名称
-      profile: dev  # 读取后缀名名称
+      profile: test  # 读取后缀名名称
       uri: http://localhost:3344  # 配置中心地址    http://config3344:3344/test/config-dev.yml
 
 eureka:
