feat Config客户端手动实现动态刷新

--- a/cloud-config-server3355/src/main/resources/bootstrap.yml
+++ b/cloud-config-server3355/src/main/resources/bootstrap.yml
@@ -9,7 +9,7 @@ spring:
     config:
       lable: master   # 分支名称
       name: config  # 配置文件名称
-      profile: test  # 读取后缀名名称
+      profile: dev  # 读取后缀名名称
       uri: http://localhost:3344  # 配置中心地址    http://config3344:3344/test/config-dev.yml
 
 eureka:
@@ -19,3 +19,10 @@ eureka:
       defaultZone: http://eureka7001:7001/eureka,http://eureka7002:7002/eureka
   #      单机版Eureka
   #      defaultZone: http://localhost:7001/eureka
+
+# 暴露监控端点
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
