style Config客户端命名修改

--- a/cloud-config-client3366/pom.xml
+++ b/cloud-config-client3366/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>cloud-config-server3355</artifactId>
+    <artifactId>cloud-config-client3366</artifactId>
     <dependencies>
         <!-- config -->
         <dependency>
@@ -48,4 +48,5 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
 </project>
