--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <module>cloud-config-center3344</module>
         <module>cloud-config-client3355</module>
         <module>cloud-config-client3366</module>
+        <module>cloud-stream-rabbitmq-provider8801</module>
     </modules>
 
     <!--  统一jar包管理-->
