--- a/cloud-stream-rabbitmq-consumer8802/src/main/resources/application.yml
+++ b/cloud-stream-rabbitmq-consumer8802/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 server:
-  port: 8801
+  port: 8802
 
 spring:
   application:
-    name: cloud-stream-provider
+    name: cloud-stream-consumer
 
   cloud:
     stream:
@@ -19,7 +19,7 @@ spring:
                 username: guest
                 password: guest
       bindings:   # 服务的整合处理
-        output:   # 表示生产者
+        input:   # 表示消费者
           destination: studyExchange    # 通道的名称
           content-type: application/json    # 设置消息类型，此处为json，文本为text/plain
           binder: defaultRabbit   # 绑定消息服务的具体设置
@@ -28,11 +28,11 @@ eureka:
   client:
     service-url:
       #      集群Eureka
-      defaultZone: http://eureka7001:7001/eureka,http://eureka7002:7002/eureka
+#      defaultZone: http://eureka7001:7001/eureka,http://eureka7002:7002/eureka
   #      单机版Eureka
-  #      defaultZone: http://localhost:7001/eureka
+        defaultZone: http://localhost:7001/eureka
   instance:
-    instance-id: send-8801    # 显示主机名称
+    instance-id: send-8802    # 显示主机名称
     prefer-ip-address: true   # 访问路径变为ip地址
     lease-renewal-interval-in-seconds: 2    # 设置心跳的间隔时间,默认为30s
     lease-expiration-duration-in-seconds: 5     #设置超过的时间5s，默认为90s
