--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <module>cloud-config-client3355</module>
         <module>cloud-config-client3366</module>
         <module>cloud-stream-rabbitmq-provider8801</module>
+        <module>cloud-stream-rabbitmq-consumer8802</module>
     </modules>
 
     <!--  统一jar包管理-->
