--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
         <module>cloud-stream-rabbitmq-consumer8803</module>
         <module>cloudalibaba-provider-payment9001</module>
         <module>cloudalibaba-provider-payment9002</module>
+        <module>cloudalibaba-nacos-consumer-order83</module>
     </modules>
 
     <!--  统一jar包管理-->
