--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <module>cloudalibaba-provider-payment9001</module>
         <module>cloudalibaba-provider-payment9002</module>
         <module>cloudalibaba-nacos-consumer-order83</module>
+        <module>cloudalibaba-nacos-config-client3377</module>
     </modules>
 
     <!--  统一jar包管理-->
