--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
         <module>cloudalibaba-provider-payment9002</module>
         <module>cloudalibaba-nacos-consumer-order83</module>
         <module>cloudalibaba-nacos-config-client3377</module>
+        <module>cloudalibaba-sentinel-service8401</module>
     </modules>
 
     <!--  统一jar包管理-->
