feat Seata分布式事务库库存storage模板搭建

--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
         <module>cloudalibaba-nacos-config-client3377</module>
         <module>cloudalibaba-sentinel-service8401</module>
         <module>seata-order-service2001</module>
+        <module>seata-storage-service2002</module>
     </modules>
 
     <!--  统一jar包管理-->
