--- a/seata-account-service2003/src/main/resources/file.conf
+++ b/seata-account-service2003/src/main/resources/file.conf
@@ -29,8 +29,7 @@ transport {
 
 service {
 
-  vgroup_mapping.test_tx_group = "default"
-
+  vgroup_mapping.test_tx_group = "default" #修改自定义事务组名称
 
   default.grouplist = "127.0.0.1:8091"
   enableDegrade = false
@@ -51,17 +50,14 @@ client {
   tm.rollback.retry.count = 1
 }
 
-
 ## transaction log store
 store {
   ## store mode: file、db
   mode = "db"
 
-
   ## file store
   file {
     dir = "sessionStore"
-
 
     # branch session size , if exceeded first try compress lockkey, still exceeded throws exceptions
     max-branch-session-size = 16384
@@ -146,5 +142,3 @@ support {
     datasource.autoproxy = false
   }
 }
-
-
