--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
         <module>cloudalibaba-sentinel-service8401</module>
         <module>seata-order-service2001</module>
         <module>seata-storage-service2002</module>
+        <module>seata-account-service2003</module>
     </modules>
 
     <!--  统一jar包管理-->
